# SPA_project

./: .coverage  README.md  docker-compose.yaml  docs.py  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
study/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
study/management/commands/: fill_payment.py
study/migrations/: 0001_initial.py  0002_initial.py  0003_course_cource_id.py  0004_rename_cource_id_course_course_id.py  0005_lesson_lesson_id.py
users/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: fill_user.py
users/migrations/: 0001_initial.py  0002_alter_payments_date_payments_alter_payments_user.py  0003_alter_payments_date_payments.py  0004_alter_payments_date_payments.py  0005_alter_payments_date_payments_and_more.py  0006_payments_payment_link_alter_payments_date_payments.py  0007_alter_payments_date_payments_and_more.py  0008_alter_payments_date_payments_and_more.py  0009_alter_payments_date_payments.py  0010_alter_payments_date_payments.py
